--- a/2048.html
+++ b/2048.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2048 game</title>
+  <link rel='icon' href="/assets/favicon.ico" />
   <link rel='stylesheet' href="2048.css">
   <script src="2048.js"></script>
 </head>
