--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2048 game</title>
   <link rel='icon' href="/assets/favicon.ico" />
-  <link rel='stylesheet' href="2048.css">
-  <script src="2048.js"></script>
+  <link rel='stylesheet' href="style.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
